--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
     "angular-material": "^1.1.1",
-    "angular-route": "^1.5.8"
+    "angular-route": "^1.5.8",
+    "angular-translate": "^2.12.1"
   }
 }
