--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-ng-annotate": "^2.0.2"
+    "grunt-ng-annotate": "^2.0.2",
+    "grunt-strip-json-comments": "^2.2.0"
   },
   "dependencies": {
     "angular": "^1.5.8",
