--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
     "angular-material": "^1.1.1",
+    "angular-md5": "^0.1.10",
     "angular-route": "^1.5.8",
     "angular-translate": "^2.12.1"
   }
