--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "angular": "^1.5.8",
     "angular-animate": "^1.5.8",
     "angular-aria": "^1.5.8",
+    "angular-chart.js": "^1.0.3",
     "angular-material": "^1.1.1",
     "angular-material-sidemenu": "^1.0.2",
     "angular-md5": "^0.1.10",
     "angular-route": "^1.5.8",
-    "angular-translate": "^2.12.1"
+    "angular-translate": "^2.12.1",
+    "chart.js": "^2.3.0"
   }
 }
