--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-ng-annotate": "^2.0.2",
-    "grunt-strip-json-comments": "^2.2.0"
+    "grunt-strip-json-comments": "^2.2.0",
+    "grunt-contrib-copy": "~1.0.0"
   },
   "dependencies": {
     "angular": "^1.5.8",
@@ -26,6 +27,7 @@
     "angular-md5": "^0.1.10",
     "angular-route": "^1.5.8",
     "angular-translate": "^2.12.1",
-    "chart.js": "^2.3.0"
+    "chart.js": "^2.3.0",
+    "material-design-icons": "~3.0.1"
   }
 }
