--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular-route": "^1.5.8",
     "angular-translate": "^2.12.1",
     "chart.js": "^2.3.0",
-    "material-design-icons": "~3.0.1"
+    "material-design-icons": "~3.0.1",
+    "angular-material-data-table": "~0.10.9"
   }
 }
