--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "angular-aria": "^1.5.8",
     "angular-chart.js": "^1.0.3",
     "angular-material": "^1.1.1",
+    "angular-material-data-table": "~0.10.9",
     "angular-material-sidemenu": "^1.0.2",
     "angular-md5": "^0.1.10",
     "angular-route": "^1.5.8",
     "angular-translate": "^2.12.1",
+    "angular-websocket": "^2.0.1",
     "chart.js": "^2.3.0",
-    "material-design-icons": "~3.0.1",
-    "angular-material-data-table": "~0.10.9"
+    "material-design-icons": "~3.0.1"
   }
 }
