--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular-translate": "^2.12.1",
     "angular-websocket": "^2.0.1",
     "chart.js": "^2.3.0",
+    "countdown": "^2.6.0",
     "material-design-icons": "~3.0.1"
   }
 }
